pkgdatadir = $(datadir)/@PACKAGE@/zfs-tests/tests/functional/direct
dist_pkgdata_SCRIPTS = \
	setup.ksh \
	cleanup.ksh \
	dio_compression.ksh \
#	dio_encryption.ksh \ Need to fix
	dio_recordsize_draid.ksh \
	dio_recordsize_mirror.ksh \
	dio_recordsize_raidz.ksh \
	dio_recordsize_stripe.ksh

dist_pkgdata_DATA = \
	dio_io.cfg
